--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,8 @@
+:root {
+	--darkblue: rgb(26, 1, 136);
+	--darkbackground: rgb(38, 33, 49);
+	--darkmodefont: rgb(239, 226, 255);
+}
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -15,8 +20,8 @@ time, mark, audio, video {
 	padding: 0;
 	border: 0;
 	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+    font-family: Arial, Helvetica, sans-serif;
+	font-weight: 100;
 }
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
@@ -27,4 +32,8 @@ body {
 }
 ol, ul {
 	list-style: none;
+}
+* {
+    background-color: var(--darkbackground);
+    color: var(--darkmodefont);
 }
