finished blog css

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -37,3 +37,24 @@ ol, ul {
     background-color: var(--darkbackground);
     color: var(--darkmodefont);
 }
+header {
+    border-bottom-style: solid;
+    border-color:var(--darkpurple);
+    border-width: 4px;
+    padding: 20px;
+    margin-bottom: 8px;
+}
+header h1 {
+    display: inline-block;
+    font-size: 48px;
+    font-weight: 700;
+}
+header button {
+    display: inline;
+    float: right;
+}
+main {
+	border-top-style: solid;
+    border-color:var(--darkpurple);
+    border-width: 4px;    
+}
