--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,7 +1,7 @@
 :root {
 	--darkpurple: rgb(70, 22, 133);
 	--darkbackground: rgb(23, 21, 27);
-	--darkmodefont: rgb(247, 239, 253);
+	--darkmodefont: rgb(219, 207, 228);
 }
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -29,13 +29,11 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+    background-color: var(--darkbackground);
+    color: var(--darkmodefont);
 }
 ol, ul {
 	list-style: none;
-}
-* {
-    background-color: var(--darkbackground);
-    color: var(--darkmodefont);
 }
 header {
     border-bottom-style: solid;
@@ -57,4 +55,12 @@ main {
 	border-top-style: solid;
     border-color:var(--darkpurple);
     border-width: 4px;    
+}
+#light-dark-btn {
+    margin: 0 12px 12px 0;
+    font-size: 32px;
+    border-style: none;
+    background-color: black;
+    padding: 0 4px 8px 4px;
+    border-radius: 8px;
 }
