--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -3,19 +3,22 @@ main {
     justify-content: space-evenly;
     width: 100%;
 }
+
 article {
-    border-color:var(--darkpurple);
+    border-color: var(--darkpurple);
     flex-wrap: wrap;
     min-width: 49%;
     min-height: 50%;
     justify-content: space-around;
 }
+
 #article1 {
     border-right-style: solid;
     border-width: 4px;
     margin-right: 4px;
     text-align: center;
 }
+
 #article1 h2 {
     padding: 30% 8% 30% 8%;
     background-image: linear-gradient(rgb(0, 255, 255), rgb(0, 0, 0));
@@ -23,28 +26,33 @@ article {
     margin: 10% 14% 10% 14%;
     font-size: 48px;
 }
+
 #article2 {
     border-left-style: solid;
     border-width: 4px;
     margin-left: 4px;
 }
+
 #article2 h3 {
     text-align: center;
     margin-top: 20%;
     font-size: 28px;
     font-weight: 700;
 }
+
 #article2 h4 {
     margin: 10px 0 4px 5%;
     font-size: 18px;
     font-weight: 700;
 }
+
 #article2 input {
     margin: 10px 0 4px 5%;
     min-width: 80%;
     font-size: 18px;
     border-radius: 10px;
 }
+
 #submit-button {
     margin: 20px 0 4px 5%;
     min-width: 81%;
@@ -55,4 +63,11 @@ article {
     border-radius: 10px;
     padding: 10px;
     font-weight: 700;
+}
+
+#error-alert {
+    margin: 10px;
+    font-size: 18px;
+    text-align: center;
+    color: rgb(255, 0, 55);
 }
